--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
         <title>Document</title>
     </head>
     <body>
-        <h1>hello world</h1>
+        <div id="hello">Hello</div>
+        <!-- <h1>hello world</h1> -->
         <script src="main.js"></script>
     </body>
 </html>
