--- a/css_practice/index.html
+++ b/css_practice/index.html
@@ -16,5 +16,44 @@
 
          <span> Span => Inline</span>
          <span> Span => Inline</span>
+
+         <div class="first_div"> First div to learn about grouping</div>
+         <div class="second_div"> Second div to learn about grouping</div>
+         <div class="third_div"> Third div to learn about grouping</div>
+         <div class="forth_div"> Forth div to learn about grouping</div>
+
+        <hr>
+        <div>Abderazzak Oumad</div>
+        <div>Abderazzak Oumad</div>
+        <div>Abderazzak Oumaddiv
+            {
+                background-color: aliceblue;
+                padding: 10px;
+                margin: 10px;
+                width: fit-content;
+                max-width: 300px;
+                height: 30px;
+                overflow: auto;
+            }
+            
+            /* span
+            {
+                background-color: aquamarine;
+                padding: 20px;
+                display: block;
+                width: 200px;
+                height: auto;
+            } */
+            
+            span
+            {
+                background-color: rgb(64, 90, 90);
+                display: inline-block;
+                padding: 10px;
+                margin: 10px;
+                height: 20px;
+                width: 100px;
+            }</div>
+        <hr>
     </body>
 </html>
